--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <title>React App</title>
   </head>
   <body>
